# HICS_Scrambler_WEB

./: README.md  index.html
backend/: app.py  cpp.pyd  createSQLdb.py
cache/: cached_data.csv
credentials/: hics-466603-b3bc066db823.json  mysqlcredentials.py
source/: CMakeLists.txt  scrambler.cpp
teams/: assign.html  index.html  script.js  sort.js  style.css
